// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should properly render with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $4.56
  </h1>
</div>
`;

exports[`should properly render with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $0.00
  </h1>
</div>
`;
